--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^11.0.1",
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "svgo": "^3.3.2"
   }
 }
